--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # DATABASE CONFIG
 DB_NAME = "ad_todo"
 DB_USER = "postgres"
-HOST = "localhost"
+DB_HOST = "localhost"
 DB_PASS = "lynx"
+DB_PORT = "3000"
